separacao dos métodos de consulta cep para "por cep, por bairro, por cidade, por localidade"
